--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -49,7 +49,7 @@ main {
   height: 15vh;
 	display: flex;
 	align-items: center;
-	justify-content: flex-start;
+	justify-content: space-between;
 	padding-left: 1em;
 	padding-right: 1em;
 }
@@ -59,6 +59,10 @@ main {
 	-webkit-align-items: center;
 	-ms-flex-align: center;
 	align-items: center;
+}
+
+.cities-selector{
+	margin-right: 2em;
 }
 
 /* Graph content */
